# rust-rocket-react-docker

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .gitignore  Dockerfile  package.json  webpack.config.js
frontend/public/: index.html
frontend/public/js/: index.html  main.js
frontend/src/: index.tsx  main.css  main.tsx
frontend/src/not_found/: not_found.tsx
frontend/src/reg_on/: registration.tsx
