[package]
name = "simple"
description = "App"
authors = ["Vladislav Trubachev"]
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_cors = "0.5.2"
tokio = { version = "1.24.2", features = ["full"] }
bson = "2.5.0"
lettre = "0.10.1"
serde_json = "1.0.93"
clippy = "0.0.302"
serde = {version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.11"



[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

